--- a/style.css
+++ b/style.css
@@ -46,3 +46,42 @@ header {
   left: 42%;
   bottom: -60px;
 }
+/*MAIN*/
+main {
+  display: flex;
+  gap: 300px;
+  height: 400px;
+  align-items: center;
+  justify-content: center;
+}
+.left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.guess {
+  font-family: "Press Start 2P", sans-serif;
+  width: 240px;
+  height: 80px;
+  background-color: #222;
+  color: #eee;
+  padding: 20px;
+  border: 5px solid #eee;
+  margin-bottom: 30px;
+  text-align: center;
+  font-size: 60px;
+}
+.btn-check {
+  font-family: "Press Start 2P", sans-serif;
+  align-items: center;
+  width: 170px;
+  height: 60px;
+  font-size: 17px;
+  cursor: pointer;
+}
+.right {
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
