--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  font-family: "Press Start 2P", sans-serif;
+  font-family: 'Press Start 2P', sans-serif;
   color: #eee;
   background-color: #222;
 }
@@ -19,7 +19,7 @@ header {
   justify-content: space-between;
 }
 .btn-again {
-  font-family: "Press Start 2P", sans-serif;
+  font-family: 'Press Start 2P', sans-serif;
   border: none;
   background-color: #eee;
   padding: 20px 25px;
@@ -45,6 +45,7 @@ header {
   position: absolute;
   left: 42%;
   bottom: -60px;
+  align-content: center;
 }
 /*MAIN*/
 main {
@@ -60,7 +61,7 @@ main {
   align-items: center;
 }
 .guess {
-  font-family: "Press Start 2P", sans-serif;
+  font-family: 'Press Start 2P', sans-serif;
   width: 240px;
   height: 80px;
   background-color: #222;
@@ -72,7 +73,7 @@ main {
   font-size: 60px;
 }
 .btn-check {
-  font-family: "Press Start 2P", sans-serif;
+  font-family: 'Press Start 2P', sans-serif;
   align-items: center;
   width: 170px;
   height: 60px;
