--- a/style.css
+++ b/style.css
@@ -91,3 +91,44 @@ input {
   gap: 50px;
 }
 /*MODAL*/
+
+.blure {
+  filter: blur(5px);
+}
+.modal {
+  width: 62%;
+  height: 420px;
+  background-color: #3a3a3a;
+  position: absolute;
+  top: 30%;
+  left: 20%;
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+}
+
+.modal.hidden {
+  display: none;
+}
+h2 {
+  margin-top: 40px;
+  margin-bottom: 30px;
+}
+#btn-start {
+  width: 150px;
+  height: 60px;
+  border: none;
+  background-color: #eee;
+  color: #222;
+  font-family: 'Press Start 2P', sans-serif;
+  font-size: 17px;
+  text-align: center;
+  cursor: pointer;
+}
+#btn-start:hover {
+  background-color: #eeeeeed2;
+  transition: 0.2s;
+}
